--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        compile 'org.altbeacon:android-beacon-library:2+'
     }
+
 }
 
 allprojects {
@@ -18,6 +18,9 @@ allprojects {
         jcenter()
         maven {
             url "https://maven.google.com"
+        }
+        flatDir{
+            dirs 'libs'
         }
     }
 }
